--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background: url('https://t3.ftcdn.net/jpg/07/33/50/26/360_F_733502690_GYuQrHyM4W7xxhRW0UPGrySJxJoRnNz4.jpg') no-repeat center center fixed;
+    background: url('https://img.freepik.com/premium-photo/hotel-event-conference-planning_1314467-82074.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #fff;
 }
